--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rohan Portfolio</title>
+    <link rel="shortcut icon" href="/src/assets/icons/RH.svg" type="image/svg">
   </head>
   <body>
     <div id="root"></div>
