--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rohan Portfolio</title>
+    <title>Rohan's Portfolio</title>
     <link rel="shortcut icon" href="/src/assets/icons/RH.svg" type="image/svg">
+    <meta name="description" content="Hey There! This is the link to Rohan Hadvani's Portfolio Website">
   </head>
   <body>
     <div id="root"></div>
